[add] POST /users handler
