# api/openapi.yaml
@@ -17,7 +17,7 @@ paths:
             tags:
                 - users
             summary: Create a new User
-            description: Create a new User
+            description: Create a new User and return JWT (Json Web Token) for authorization
             parameters: []
             requestBody:
                 description: user to create
@@ -31,6 +31,17 @@ paths:
             responses:
                 "201":
                     description: CREATED
+                    headers:
+                        Authorization:
+                            schema:
+                                type: string
+                            example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+                            description: Json Web Token for the user
+                "400":
+                    description: Cannot parse request body
+                "500":
+                    description: Internal server error
+
 components:
     schemas:
         User:
@@ -43,6 +54,13 @@ components:
                     type: string
                 password:
                     type: string
+    securitySchemes:
+        bearerAuth:
+            type: http
+            scheme: bearer
+            bearerFormat: JWT
+security:
+    - bearerAuth: []
 tags:
     - name: users
       description: about users
